<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_round_white_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_13sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:text="@string/add_new_user"
        android:textColor="@color/black33"
        android:textStyle="bold"
        android:textSize="@dimen/_13ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/greylight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/user_name"
            android:textColor="@color/black33"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/etuserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/name_hint"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black58" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/user_email"
            android:textColor="@color/black33"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email_hint"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black58" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/gender"
            android:textColor="@color/black33"
            android:textSize="@dimen/_12ssp" />

        <RadioGroup
            android:id="@+id/rdrGrpGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/cancel"
                android:textColor="@color/black2E" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/ok"
                android:textColor="@color/black2E" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>