<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/lyUserItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_1sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name_hint"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:id="@+id/tvUserStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/active"
                        android:textColor="@color/active"
                        android:textSize="@dimen/_11ssp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:text="@string/email_hint"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_11ssp"
                    app:drawableLeftCompat="@drawable/ic_baseline_email_24" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</layout>