<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_round_white_bg"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_8sdp"
    android:paddingTop="@dimen/_16sdp">

    <ImageView
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_gravity="center"
        android:src="@drawable/ic_remove_alert_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/remove_user_alert"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/lyNo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/no"
                    android:textColor="@color/rounded_border_button"
                    android:textSize="@dimen/_13ssp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lyRemove"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_remove"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/yes_remove"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>